<resources>
    <string name="app_name">Farsoon</string>
    <string name="title_deviceInfo">设备信息</string>
    <string name="title_systemsettings">服务</string>
    <string name="title_individualsettings">个性设置</string>
    <string name="title_contactus">关于我们</string>
    <string name="app_exit">退出应用</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="activity_title_login">登     录</string>
    <string name="login_remember_username">记住用户名</string>
    <string name="login_remember_password">记住密码</string>
    <string name="activity_title_login_setting">登录设置</string>
    <string name="app_footer">Hunan Farsoon High-Technology Co.,Ltd</string>
    <string name="title_home">主页信息</string>
    <string name="company_about">公司新闻</string>
    <string name="company_device">设备</string>
    <string name="company_meterial">材料</string>
    <string name="my_device">我</string>
    <string name="device_loading">正在获取信息</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">警报设置</string>

</resources>
