<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item-->
        <!--android:id="@+id/navigation_home"-->
        <!--android:icon="@android:drawable/ic_menu_send"-->
        <!--android:title="@string/title_home" />-->

    <item
        android:id="@+id/navigation_deviceInfo"
        android:icon="@mipmap/process"
        android:title="@string/title_deviceInfo" />

    <item
        android:id="@+id/navigation_individualSettings"
        android:icon="@mipmap/edit"
        android:title="@string/title_individualsettings" />
    <item
        android:id="@+id/navigation_systemSettings"
        android:icon="@mipmap/set"
        android:title="@string/title_systemsettings" />
    <!--<item-->
        <!--android:id="@+id/navigation_contactus"-->
        <!--android:icon="@android:drawable/ic_btn_speak_now"-->
        <!--android:title="@string/title_contactus" />-->
</menu>
