<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
   >

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/login_toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="@color/colorPrimary"-->
        <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
        <!--&lt;!&ndash;-->
          <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
         <!--app:popupTheme="@style/ToolbarPopupTheme"&ndash;&gt;-->
    <!--</android.support.v7.widget.Toolbar>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/Roll_pager_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="4">

       <ImageView
           android:background="@mipmap/farsoon_logo"
           android:layout_width="260dp"
           android:layout_height="220dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:layout_marginBottom="48dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    android:inputType="textAutoComplete"

                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/activity_title_login"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="InvalidImeActionId" />
            </android.support.design.widget.TextInputLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="32dp"-->
                <!--android:gravity="center"-->
                <!--android:orientation="horizontal">-->

                <!--<CheckBox-->
                    <!--android:id="@+id/remember_username"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="start"-->
                    <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
                    <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
                    <!--android:text="@string/login_remember_username"-->
                    <!--android:textColor="@android:color/darker_gray" />-->

                <!--<CheckBox-->
                    <!--android:id="@+id/remember_password"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="end"-->
                    <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
                    <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
                    <!--android:text="@string/login_remember_password"-->
                    <!--android:textColor="@android:color/darker_gray" />-->
            <!--</LinearLayout>-->

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_background"
                android:text="@string/activity_title_login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <!--<TextView-->
                <!--android:id="@+id/login_setting_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="end"-->
                <!--android:clickable="true"-->
                <!--android:drawableLeft="@drawable/ic_dashboard_black_24dp"-->
                <!--android:drawableStart="@drawable/ic_dashboard_black_24dp"-->
                <!--android:gravity="center"-->
                <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
                <!--android:paddingLeft="16dp"-->
                <!--android:paddingRight="16dp"-->
                <!--android:paddingTop="@dimen/activity_vertical_margin"-->
                <!--android:text="@string/activity_title_login_setting"-->
                <!--android:textColor="@color/gray" />-->

            <!--<TextView-->
                <!--android:id="@+id/sign_up"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:padding="12dp"-->
                <!--android:text="没有账号？点击注册" />-->
        </LinearLayout>
        <!--      android:drawableLeft="@drawable/setting"
                  android:drawableStart="@drawable/setting"-->

        <LinearLayout
            android:id="@+id/farsoon_slogan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_footer"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>